# tasty-discover

./: .gitignore  .hlint.yaml  README.md  appveyor.yml  cabal.project  hie.yaml  tasty-discover.cabal
.github/workflows/: hlint.yml  linux.yaml
app/: Main.hs
src/Test/Tasty/: Config.hs  Discover.hs  Generator.hs
test/: ConfigTest.hs  DiscoverTest.hs
