cabal-version:      2.4
name:               tasty-discover
version:            4.2.1
synopsis:           Test discovery for the tasty framework.
description:
  Automatic test discovery and runner for the tasty framework.
  Prefix your test case names and tasty-discover will discover, collect and run them. All popular test libraries are covered. Configure once and then just write your tests. Avoid forgetting to add test modules to your Cabal/Hpack files. Tasty ingredients are included along with various configuration options for different use cases. Please see the `README.md` below for how to get started.

category:           Testing
stability:          Experimental
homepage:           https://github.com/waddlaw/tasty-discover
bug-reports:        https://github.com/waddlaw/tasty-discover/issues
author:             Luke Murphy
maintainer:         waddlaw <ingronze@gmail.com>
copyright:          2016 Luke Murphy
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.4.4 || ==8.6.5 || ==8.8.1
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/waddlaw/tasty-discover

flag pedantic
  description: pedantic option
  manual:      True
  default:     False

common common
  build-depends:
    , base        >=4.11 && <4.14
    , containers  >=0.4  && <1.0
    , directory   >=1.1  && <2.0
    , filepath    >=1.3  && <2.0
    , Glob        >=0.8  && <1.0

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  if flag(pedantic)
    ghc-options: -Werror

  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Test.Tasty.Config
    Test.Tasty.Discover
    Test.Tasty.Generator

  other-modules:   Paths_tasty_discover

executable tasty-discover
  import:        common
  main-is:       app/Main.hs
  build-depends: tasty-discover
  other-modules: Paths_tasty_discover
  ghc-options:   -O2

test-suite test
  import:             common
  type:               exitcode-stdio-1.0
  main-is:            Driver.hs
  hs-source-dirs:     test
  build-depends:
    , hedgehog
    , tasty
    , tasty-discover
    , tasty-hedgehog
    , tasty-hspec
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck

  -- cabal-fmt: expand test -Driver
  other-modules:
    ConfigTest
    DiscoverTest
    SubMod.FooBaz
    SubMod.PropTest
    SubMod.SubSubMod.PropTest
